Interpreter/tests/negative-examples/divideZero.cl
class Main inherits IO {
  main() : Object { 
    5/0
  } ;
} ; 
